src/app/globals.css
/* ... */
html[data-font="recursive-linear"] body {
  font-family: var(--font-recursive-linear);
}

html[data-font="hack"] body {
  font-family: var(--font-hack);
}

html[data-font="victor"] body {
  font-family: var(--font-victor-mono);
}

html[data-font="meslo"] body {
  font-family: var(--font-meslo);
}

body {
  @apply bg-background-clr font-cascadia-code text-fs-body leading-base font-regular text-text-clr;
}

a {
  @apply inline-block px-0.5 text-secondary-clr underline transition-all duration-150 hover:bg-primary-clr hover:text-text-clr;
}

a:focus-visible {
  @apply rounded-sm outline-2 outline-offset-2 outline-primary-clr;
}

@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

